[metadata]
name = balderhub
description = Entry Point BalderHub projects
author = Max Stahlschmidt and others
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hub.balder.dev
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = test, systemtest, reusable, scenario, junit, balder
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Source=https://github.com/balder-dev/hub.balder.dev
    Tracker=https://github.com/balder-dev/hub.balder.dev/issues

[options]
packages =

install_requires =

setup_requires =
    setuptools
zip_safe = no
